Fixed z-index for fadein

--- a/css/master.css
+++ b/css/master.css
@@ -33,7 +33,7 @@ html {
   height: 100%;
   background: #000;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   opacity: 1;
   -webkit-transition: background 1000ms ease-in-out;
   transition: background 1000ms ease-in-out;
